--- a/ledger-accounting/src/main/resources/messages_en.properties
+++ b/ledger-accounting/src/main/resources/messages_en.properties
@@ -1,14 +1,14 @@
 homeScreen.menu=\
 ===========================================\n\
-   Welcome to the accounting application\n\
+   Welcome to the Accounting App\n\
 ===========================================\n\
 Please type an option to access\n\
 D- Add Deposit\n\
 P- Add a Payment\n\
-L- Ledger book\n\
+L- Accounting Ledger\n\
 X- Exit\n\
 =========================================
-homeScreen.exit=Exiting the Accounting Application
+homeScreen.exit=Exiting the Accounting App
 homeScreen.error=Invalid option. Please type 'D' 'P' 'L'  or 'X'
 register.deposit=Please enter the details for the new deposit:
 register.date=Date (using current date): 
@@ -25,10 +25,69 @@ register.error2=Error saving the transaction
 register.payment=Please enter the details for the new payment:
 ledger.menu=\
 ===========================================\n\
-               Ledger Menu\n\
+          Accounting Ledger Menu\n\
 ===========================================\n\
 Please type an option to access\n\
 A- All transactions\n\
 D- All deposits\n\
-X- Exit\n\
+P- All payments\n\
+R- Reports\n\
+H- Home\n\
 =========================================
+ledger.prompt1=\
+-----------------------------------------------------------------------------\n\
+                              Transactions\n\
+Date        Time     Description              Vendor          Amount\n\
+-----------------------------------------------------------------------------
+ledger.line=---------------------------------------------------------------------------
+ledger.prompt2=\
+-----------------------------------------------------------------------------\n\
+                              Deposits\n\
+Date        Time     Description              Vendor          Amount\n\
+-----------------------------------------------------------------------------
+ledger.prompt3=\
+-----------------------------------------------------------------------------\n\
+                              Payments\n\
+Date        Time     Description              Vendor          Amount\n\
+-----------------------------------------------------------------------------
+ledger.exit=Exiting Accounting Ledger Menu
+ledger.error=Invalid option. Please type 'A' 'D' 'P' 'R' o 'H'
+reports.menu=\
+===========================================\n\
+              Reports Menu\n\
+===========================================\n\
+Please type an option to access\n\
+1- Month to Date\n\
+2- Previous Month\n\
+3- Year to Date\n\
+4- Previous Year\n\
+5- Search by Vendor\n\
+0- Back\n\
+=========================================
+reports.exit=Exiting Reports Menu
+reports.error1=Invalid option. Please type '1' '2' '3' '4' '5' o '0'
+reports.prompt1=\
+-----------------------------------------------------------------------------\n\
+                              Month to Date\n\
+Date        Time     Description              Vendor          Amount\n\
+-----------------------------------------------------------------------------
+reports.line=---------------------------------------------------------------------------
+reports.prompt2=\
+-----------------------------------------------------------------------------\n\
+                              Previous Month\n\
+Date        Time     Description              Vendor          Amount\n\
+---------------------------------------------------------------------------
+reports.prompt3=\
+-----------------------------------------------------------------------------\n\
+                              Year to Date\n\
+Date        Time     Description              Vendor          Amount\n\
+---------------------------------------------------------------------------
+reports.prompt4=\
+-----------------------------------------------------------------------------\n\
+                              Previous Year\n\
+Date        Time     Description              Vendor          Amount\n\
+---------------------------------------------------------------------------
+vendor.prompt=Enter the vendor name or type 'X' to go back :
+vendor.message1=Vendor found:
+vendor.message2=No transactions found for that vendor 
+vendor.message3=Returning
