--- a/ledger-accounting/src/main/resources/messages_es.properties
+++ b/ledger-accounting/src/main/resources/messages_es.properties
@@ -1,15 +1,15 @@
 homeScreen.menu=\
 ===========================================\n\
-   Bienvenido a la aplicación contable\n\
+   Bienvenido a la App Contable\n\
 ===========================================\n\
 Por favor, elija una opción para acceder\n\
 D- Añadir Depósito\n\
 P- Añadir un Pago\n\
-L- Libro Mayor\n\
+L- Libro Contable\n\
 X- Salir\n\
 =========================================
-homeScreen.exit=Saliendo de la Aplicación Contable
-homeScreen.error=Opcion Invalida. Por favor marque 'D' 'P' 'L'  o 'X'
+homeScreen.exit=Saliendo de la App Contable
+homeScreen.error=Opción Inválida. Por favor marque 'D' 'P' 'L'  o 'X'
 register.deposit=Por favor, ingrese los detalles del deposito:
 register.date=Fecha (utilizando la fecha actual): 
 register.time=Hora (utilizando la hora actual): 
@@ -23,4 +23,71 @@ register.message1=Depósito añadido y guardado correctamente
 register.message2=Pago añadido y guardado correctamente
 register.error2=Error al guardar la transacción
 register.payment=Por favor, ingrese los detalles del pago:
-
+ledger.menu=\
+===========================================\n\
+              Menú Libro Contable\n\
+===========================================\n\
+Por favor, elija una opción para acceder\n\
+A- Todas las transacciones\n\
+D- Todos los depósitos\n\
+P- Todos los pagos\n\
+R- Reportes\n\
+H- Página de inicio\n\
+=========================================
+ledger.prompt1=\
+-----------------------------------------------------------------------------\n\
+                              Transacciones\n\
+Fecha        Hora     Descripcion              Proveedor       Monto\n\
+-----------------------------------------------------------------------------
+ledger.line=-----------------------------------------------------------------------------
+ledger.prompt2=\
+-----------------------------------------------------------------------------\n\
+                              Depósitos\n\
+Fecha        Hora     Descripcion              Proveedor       Monto\n\
+-----------------------------------------------------------------------------
+ledger.prompt3=\
+-----------------------------------------------------------------------------\n\
+                                Pagos\n\
+Fecha        Hora     Descripcion              Proveedor       Monto\n\
+-----------------------------------------------------------------------------
+ledger.exit=Saliendo del Menú Libro Contable
+ledger.error=Opción Inválida. Por favor marque 'A' 'D' 'P' 'R' o 'H'
+reports.menu=\
+===========================================\n\
+              Menú Reportes\n\
+===========================================\n\
+Please type an option to access\n\
+1- Mes hasta la fecha\n\
+2- Mes anterior\n\
+3- Año hasta la fecha\n\
+4- Año anterior\n\
+5- Búsqueda por proveedor\n\
+0- Volver\n\
+=========================================
+reports.exit=Saliendo del Menú Reportes
+reports.error1=Opción Inválida. Por favor marque '1' '2' '3' '4' '5' o '0'
+reports.prompt1=\
+-----------------------------------------------------------------------------\n\
+                              Mes hasta la fecha\n\
+Fecha        Hora     Descripcion              Proveedor       Monto\n\
+-----------------------------------------------------------------------------
+reports.line=-----------------------------------------------------------------------------
+reports.prompt2=\
+-----------------------------------------------------------------------------\n\
+                              Mes anterior\n\
+Fecha        Hora     Descripcion              Proveedor       Monto\n\
+---------------------------------------------------------------------------
+reports.prompt3=\
+-----------------------------------------------------------------------------\n\
+                              Año hasta la fecha\n\
+Fecha        Hora     Descripcion              Proveedor       Monto\n\
+---------------------------------------------------------------------------
+reports.prompt4=\
+-----------------------------------------------------------------------------\n\
+                              Año anterior\n\
+Fecha        Hora     Descripcion              Proveedor       Monto\n\
+---------------------------------------------------------------------------
+vendor.prompt=Ingrese el nombre del proveedor o escriba una 'X' para volver :
+vendor.message1=Proveedor encontrado: 
+vendor.message2=No se han encontrado transacciones para ese proveedor 
+vendor.message3=Volviendo al menu anterior
