Add Deposit and Add Transaction refister the transaction as payment or deposit depends of the amount value that the user prompt

--- a/ledger-accounting/src/main/resources/messages_es.properties
+++ b/ledger-accounting/src/main/resources/messages_es.properties
@@ -10,17 +10,17 @@ X- Salir\n\
 =========================================
 homeScreen.exit=Saliendo de la App Contable
 homeScreen.error=Opción Inválida. Por favor marque 'D' 'P' 'L'  o 'X'
-register.deposit=Por favor, ingrese los detalles del deposito:
+register.transaction=Por favor, ingrese los detalles de la transacción:
 register.date=Fecha (utilizando la fecha actual): 
 register.time=Hora (utilizando la hora actual): 
-register.description=Descripcion: 
+register.description=Descripción: 
 register.vendor=Proveedor: 
-register.amount=Monto (debe ser un numero positivo): 
-register.amount1=Monto (debe ser un numero negativo): 
-register.error1=Error: Un deposito debe ser un numero positivo
+register.amount=Monto: 
+register.amount1=Monto (debe ser un número negativo): 
+register.error1=Error: Un deposito debe ser un número positivo
 register.error3=Error: Un pago debe ser un numero positivo
 register.message1=Depósito añadido y guardado correctamente
-register.message2=Pago añadido y guardado correctamente
+register.message2=Transacción añadida y guardada correctamente
 register.error2=Error al guardar la transacción
 register.payment=Por favor, ingrese los detalles del pago:
 ledger.menu=\
@@ -56,7 +56,7 @@ reports.menu=\
 ===========================================\n\
               Menú Reportes\n\
 ===========================================\n\
-Please type an option to access\n\
+Por favor, elija una opción para acceder\n\
 1- Mes hasta la fecha\n\
 2- Mes anterior\n\
 3- Año hasta la fecha\n\
