--- a/ledger-accounting/src/main/resources/messages_en.properties
+++ b/ledger-accounting/src/main/resources/messages_en.properties
@@ -1,3 +1,4 @@
+
 homeScreen.menu=\
 ===========================================\n\
    Welcome to the Accounting App\n\
@@ -10,17 +11,17 @@ X- Exit\n\
 =========================================
 homeScreen.exit=Exiting the Accounting App
 homeScreen.error=Invalid option. Please type 'D' 'P' 'L'  or 'X'
-register.deposit=Please enter the details for the new deposit:
+register.transaction=Please enter the details of the transaction:
 register.date=Date (using current date): 
 register.time=Time (using current time): 
 register.description=Description: 
 register.vendor=Vendor: 
-register.amount=Amount (must be a positive number): 
+register.amount=Amount: 
 register.amount1=Amount (must be a negative number): 
 register.error1=A deposit amount must be positive number
 register.error3=A payment amount must be negative number
 register.message1=Deposit added and saved successfully
-register.message2=Payment added and saved successfully
+register.message2=Transaction added and saved successfully
 register.error2=Error saving the transaction
 register.payment=Please enter the details for the new payment:
 ledger.menu=\
